feat: Extend package search
